fixed button issue on safari browser by changing postion to sticky and moving button to body container

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -161,7 +161,7 @@ h6 {
   left: 0;
 }
 
-.header .header-toggle {
+.header-toggle {
   color: var(--contrast-color);
   background-color: var(--accent-color);
   font-size: 22px;
@@ -170,12 +170,14 @@ h6 {
   justify-content: center;
   width: 40px;
   height: 40px;
-  border-radius: 50%;
+  border-radius: 10%;
   cursor: pointer;
-  position: fixed;
+  position: sticky;
   top: 15px;
-  right: 15px;
-  z-index: 9999;
+  /* left: 0px; */
+  margin-left: auto;
+  margin-right: 15px;
+  z-index: 99999;
   transition: background-color 0.3s;
 }
 
@@ -458,24 +460,11 @@ section,
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.hero img {
-  position: absolute;
-  inset: 0;
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: 1;
-}
-
-.hero:before {
-  content: "";
-  background: color-mix(in srgb, var(--background-color), transparent 50%);
-  position: absolute;
-  inset: 0;
-  z-index: 2;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../img/static_hero.webp");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .hero .container {
@@ -1197,5 +1186,12 @@ section,
 
   .social-impact-subhead {
     line-height: 25px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .hero {
+    margin-top: -40px;
+    padding-top: 0;
   }
 }
